[package]
name = "stonks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
clap = "3.0.0-beta.2"
async-trait = "0.1.51"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = { version = "1.1", features = [] }
